@@ -1104,22 +1104,23 @@ rb_iterate(VALUE (* it_proc) (VALUE), VALUE data1,
 {
     int state;
     volatile VALUE retval = Qnil;
-    NODE *node = NEW_IFUNC(bl_proc, data2);
+    struct IFUNC *ifunc = (struct IFUNC *)NEW_IFUNC(bl_proc, data2);
     rb_thread_t *th = GET_THREAD();
     rb_control_frame_t *volatile cfp = th->cfp;
 
-    node->nd_aid = rb_frame_this_func();
+    ifunc->id = rb_frame_this_func();
+
     TH_PUSH_TAG(th);
     state = TH_EXEC_TAG();
     if (state == 0) {
 	VAR_INITIALIZED(th);
-	VAR_INITIALIZED(node);
+	VAR_INITIALIZED(ifunc);
       iter_retry:
 	{
 	    rb_block_t *blockptr;
 	    if (bl_proc) {
 		blockptr = RUBY_VM_GET_BLOCK_PTR_IN_CFP(th->cfp);
-		blockptr->iseq = (void *)node;
+		blockptr->iseq = (void *)ifunc;
 		blockptr->proc = 0;
 	    }
 	    else {
